--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="#">
     <title>Vite + React + TS</title>
   </head>
-  <body class="dark">
+  <body class="">
     <div id="root" ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
